Bug 633847 - White-on-yellow close button is hard to see (missing-plugin infobar). r=dao a=beltzner
UltraBlame original commit: 3a1bdbbca259149b682d270a0a363e172756c195

--- a/toolkit/themes/pinstripe/global/notification.css
+++ b/toolkit/themes/pinstripe/global/notification.css
@@ -501,6 +501,43 @@ rect
 )
 ;
 }
+notification
+[
+type
+=
+"
+warning
+"
+]
+.
+messageCloseButton
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+close
+.
+png
+"
+)
+;
+}
 .
 messageCloseButton
 >
